lesson-20/hw20/deployment-autoscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  labels:
    env: develop
    app: php-apache
    owner: AndrewDL
spec:
  selector:
    matchLabels:
      project: load-balancer-ingress
  template:
    metadata:
      labels:
        project: load-balancer-ingress
    spec:
      containers:
        - name: web-php-apache
          image: 097084951758.dkr.ecr.us-east-1.amazonaws.com/andrewdlk:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: web-php-apache
  labels:
    env: develop
    owner: AndrewDL
spec:
  selector:
    project: k8s-php
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
