lesson-20/hw20/deployment-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-php-apache
  labels:
    env: develop
    app: my-php-k8s-app
    owner: AndrewDL
spec:
  replicas: 2
  selector:
    matchLabels:
      project: k8s-php
  template:
    metadata:
      labels:
        project: k8s-php
    spec:
      containers:
        - name: dav-k8s-web
          image: 097084951758.dkr.ecr.us-east-1.amazonaws.com/andrewdlk:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-php-apache
  labels:
    env: develop
    owner: AndrewDL
spec:
  selector:
    project: k8s-php
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
