lesson-20/hw20/services-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-php-apache
  labels:
    env: develop
    owner: AndrewDL
spec:
  selector:
    project: k8s-php
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
