lesson-20/hw20/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
spec:
  rules:
    - host: a91a8d22eab304ea2bfaee5a649c08af-1671790774.us-east-1.elb.amazonaws.com
      http:
        paths:
          - backend:
              service:
                name: web-php-apache
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
